# Encyclopedia

./: .gitignore  Dockerfile  docker-compose.yml  init.sql
.devcontainer/: devcontainer.json
server/: Cargo.toml  Dockerfile
server/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: Dockerfile  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  types.ts
ui/src/components/: EditorToolbar.tsx  ExportModal.tsx
ui/src/extensions/: WikiLink.ts
